--- a/public_html/static/css/style.css
+++ b/public_html/static/css/style.css
@@ -5730,6 +5730,15 @@ html[lang="ar"] #soreha .c7 span {
   .Quran i {
     font-size: 20px; }
 
+  .Quran .p1 i, .Quran .p2 i {
+    font-size: 28px; }
+
+  .Quran[data-style='iransans'] i {
+    font-size: 11px; }
+
+  .Quran[data-style='noorehuda'] i {
+    font-size: 16px; }
+
   .Quran .ui.dropdown {
     padding: 0 10px 0 40px; }
 
